project(transformation_nodes)

add_library(${PROJECT_NAME} SHARED src/UndistortDetectionsNode.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC ${EIGEN3_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} PUBLIC common)
target_link_libraries(${PROJECT_NAME} PUBLIC msg)
target_link_libraries(${PROJECT_NAME} PUBLIC concurra)
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
target_compile_definitions(${PROJECT_NAME} PRIVATE CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

add_executable(test_${PROJECT_NAME} test/test_${PROJECT_NAME}.cpp)
target_link_libraries(test_${PROJECT_NAME} PUBLIC ${PROJECT_NAME})
target_link_libraries(test_${PROJECT_NAME} PUBLIC cameras_simulator_nodes)
target_link_libraries(test_${PROJECT_NAME} PUBLIC image_visualization_nodes)
target_link_libraries(test_${PROJECT_NAME} PUBLIC image_processing_nodes)
target_link_libraries(test_${PROJECT_NAME} PUBLIC config)
target_link_libraries(test_${PROJECT_NAME} PUBLIC yolo_nodes)
target_compile_features(test_${PROJECT_NAME} PRIVATE cxx_std_23)
target_compile_definitions(test_${PROJECT_NAME} PRIVATE CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

add_test(NAME ctest_${PROJECT_NAME} COMMAND test_${PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

#project(transformation)
#
#add_library(${PROJECT_NAME} SHARED src/Config.cpp src/LensConfig.cpp src/CameraConfig.cpp)
#target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
#target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
#target_include_directories(${PROJECT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
#target_include_directories(${PROJECT_NAME} PUBLIC ${EIGEN3_INCLUDE_DIR})
#target_link_libraries(${PROJECT_NAME} PUBLIC common)
#target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
##target_link_libraries(${PROJECT_NAME} PUBLIC ${Boost_LIBRARIES})
#target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
#target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
#target_link_libraries(${PROJECT_NAME} PUBLIC range-v3::range-v3)
#target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
#target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
#
#project(transformation_nodes)
#
#add_library(${PROJECT_NAME} SHARED src/transformation_node.cpp src/undistort_node.cpp)
#target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
#target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
#target_include_directories(${PROJECT_NAME} PUBLIC ${EIGEN3_INCLUDE_DIR})
#target_link_libraries(${PROJECT_NAME} PUBLIC common)
#target_link_libraries(${PROJECT_NAME} PUBLIC transformation)
#target_link_libraries(${PROJECT_NAME} PUBLIC node)
#target_link_libraries(${PROJECT_NAME} PUBLIC msg)
#target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
#target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
#target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
#
#project(test_distortion)
#
#add_executable(${PROJECT_NAME} test/${PROJECT_NAME}.cpp)
#target_link_libraries(${PROJECT_NAME} PUBLIC transformation_nodes)
#target_link_libraries(${PROJECT_NAME} PUBLIC transformation)
#
#project(test_display_3d_boxes)
#add_executable(${PROJECT_NAME} test/${PROJECT_NAME}.cpp)
#target_link_libraries(${PROJECT_NAME} PUBLIC transformation_nodes)
#target_link_libraries(${PROJECT_NAME} PUBLIC transformation)
#target_link_libraries(${PROJECT_NAME} PUBLIC visualization_nodes)
#