#project(signal_handler)
#add_library(${PROJECT_NAME} SHARED)
#target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
#target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
#target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")